--- a/src/main/resources/static/css/projects-style.css
+++ b/src/main/resources/static/css/projects-style.css
@@ -13,3 +13,8 @@ h1 {
 .vert-list-content {
     padding-bottom: 3%;
 }
+
+/* IE 11 fix */
+.vert-list-content p {
+    max-width: 1000px;
+}
